--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 * {
   padding:0;
   margin:0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Francois One', sans-serif;
+	font-weight: 400;
 }
 
 .clearfix {
