--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ h3 {
   font-size: 20px;
   color: #000000;
   line-height: 22px;
+  margin-top: 8px;
 }
 
 h4 {
@@ -101,7 +102,6 @@ a {
 }
 
 .white-text {
-  font-weight: bold;
   color: #FFFFFF;
 }
 
@@ -127,6 +127,10 @@ a {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 10px;
+}
+
+.flex-item {
+  display: block;
 }
 
 .center-content {
